@@ -47,6 +47,9 @@ public class LevelLoader {
 	final LevelConfigurationJSON config = gson.fromJson(configJson,
 		LevelConfigurationJSON.class);
 
+	// -------------
+	// Tile Data
+	// -------------
 	// Load TextureAtlas
 	final String atlasName = config.imageName;
 	final String atlasPath = PATH + atlasName;
@@ -60,6 +63,7 @@ public class LevelLoader {
 	    final TileTypeJSON tileData = config.tileData[i];
 	    final int id = tileData.id;
 	    final int imageSize = config.tileSize;
+	    final boolean occupied = tileData.occupied;
 
 	    // Register textures
 	    final String textureName = Tile.PREFIX + String.valueOf(id);
@@ -95,7 +99,8 @@ public class LevelLoader {
 		}
 	    }
 
-	    final TileType type = new TileType(id, imageSize, colliders);
+	    final TileType type = new TileType(id, imageSize, occupied,
+		    colliders);
 
 	    tileDataMap.put(new Integer(id), type);
 	}
@@ -116,18 +121,51 @@ public class LevelLoader {
 	final Tile[][] tiles = new Tile[data.height][data.width];
 	for (int r = 0; r < tiles.length; r++) {
 	    for (int c = 0; c < tiles[0].length; c++) {
-		if (!tileDataMap.containsKey(new Integer(data.tiles[r][c]))) {
+		if (!tileDataMap.containsKey(Integer.valueOf(data.tiles[r][c]))) {
 		    throw new IOException("Malformed tile data. Invalid id: "
 			    + data.tiles[r][c]);
 		}
 
-		tiles[r][c] = TileFactory.create(tileDataMap.get(new Integer(
-			data.tiles[r][c])));
+		tiles[r][c] = TileFactory.create(tileDataMap.get(Integer
+			.valueOf(data.tiles[r][c])));
+	    }
+	}
+
+	// Background tile for the level
+	final Tile backgroundTile = TileFactory.create(tileDataMap.get(Integer
+		.valueOf(0)));
+
+	// Create pathfinder
+	final Pathfinder pathfinder = new Pathfinder(tiles);
+
+	// -------------
+	// Entity Data
+	// -------------
+	// Load entities
+	final Enemy[] enemies = new Enemy[data.enemies.length];
+	for (int i = 0; i < enemies.length; i++) {
+	    try {
+		final String enemyClass = data.enemies[i].type;
+		final double x = data.enemies[i].x * Tile.SIZE;
+		final double y = data.enemies[i].y * Tile.SIZE;
+		final Enemy enemy = Enemy.createEnemy(enemyClass, x, y,
+			pathfinder);
+		final Node start = new Node(data.enemies[i].patrolStart[0],
+			data.enemies[i].patrolStart[1]);
+		final Node goal = new Node(data.enemies[i].patrolGoal[0],
+			data.enemies[i].patrolGoal[1]);
+		enemy.setPatrolRoute(start, goal);
+		enemies[i] = enemy;
+	    } catch (final ClassNotFoundException e) {
+		e.printStackTrace();
+		throw new IOException(
+			"Malformed Entity data. Invalid class name: "
+				+ data.enemies[i].type);
 	    }
 	}
 
 	// Create level
-	final Level result = new Level(atlas, tiles);
+	final Level result = new Level(atlas, tiles, backgroundTile, enemies);
 
 	return result;
     }
